--- a/css-transitions-and-transforms/styles.css
+++ b/css-transitions-and-transforms/styles.css
@@ -23,6 +23,7 @@ section {
   color: white;
   background-color: blue;
   cursor: pointer;
+  transition: all 0.5s ease;
 }
 
 .custom-button:hover {
@@ -42,7 +43,7 @@ section {
   border-radius: 0.25rem;
   background-color: white;
   cursor: pointer;
-  transform: scale(1) 0.2s ease-in-out 1s;
+  transform: scale(1.5) 0.5s ease-in-out 0.2s;
 }
 .card:hover: {
   transform: scale(1.5);
@@ -50,4 +51,5 @@ section {
 
 .card > img {
   width: 100%;
+  transform: scale(1.5) 0.5s ease-in-out 0.2s;
 }
