--- a/css-transitions-and-transforms/styles.css
+++ b/css-transitions-and-transforms/styles.css
@@ -40,10 +40,10 @@ section {
   padding: 0.5rem;
   margin-bottom: 2rem;
   border: 1px solid rgb(228, 228, 228);
-  border-radius: 0.25rem;
+  border-radius: 0.35rem;
   background-color: white;
   cursor: pointer;
-  transform: scale(1.5) 0.5s ease-in-out 0.2s;
+  transition: transform 0.5s ease;
 }
 .card:hover: {
   transform: scale(1.5);
